<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ingreso_usuario" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nombre"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ingreso_telefono" />
        <EditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_telefono"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ingreso_sexo" />
        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rg_sexo">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/txt_masculino"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/txt_femenino"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_guardar_contacto"/>
    <Button
        android:id="@+id/btn_consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_consultar_contacto"/>
</LinearLayout>